# wimlib

./: .clang-format  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.WINDOWS  README.WINDOWS.md  README.md  TODO  aclocal.m4  bootstrap  clang-scan-build.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.windows  libtool  make-release  make-releases  make-windows-release  make-windoze-release  update-version  wimlib-config.cmake.in  wimlib-imagex.sln  wimlib.pc.in  wimlib_tchar.h
.github/workflows/: ci.yml
archlinux/: PKGBUILD  PKGBUILD.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: changelog  changelog.in  control  copyright  rules  watch  wimlib-dev.install  wimlib-doc.docs  wimlib.install  wimlib7.install
doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  imagex-append.1  imagex-append.1.in  imagex-apply.1  imagex-apply.1.in  imagex-capture.1  imagex-capture.1.in  imagex-delete.1  imagex-delete.1.in  imagex-dir.1  imagex-dir.1.in  imagex-export.1  imagex-export.1.in  imagex-extract.1.in  imagex-info.1  imagex-info.1.in  imagex-join.1.in  imagex-mount.1  imagex-mount.1.in  imagex-mountrw.1  imagex-mountrw.1.in  imagex-optimize.1.in  imagex-split.1.in  imagex-unmount.1  imagex-unmount.1.in  imagex-update.1.in  imagex.1  imagex.1.in  mkwinpeimg.1  mkwinpeimg.1.in
doc/html/: files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  wimlib_8h.html  wimlib_8h_source.html
doc/html/search/: all_77.js  defines_77.js  enums_77.js  enumvalues_77.js  files_77.js  functions_77.js  search.js  typedefs_77.js
doc/man1/: imagex-append.1.in  imagex-apply.1.in  imagex-capture.1.in  imagex-delete.1.in  imagex-dir.1.in  imagex-export.1.in  imagex-extract.1.in  imagex-info.1.in  imagex-join.1.in  imagex-mount.1.in  imagex-mountrw.1.in  imagex-optimize.1.in  imagex-split.1.in  imagex-update.1.in  imagex-verify.1.in  imagex.1.in  mkwinpeimg.1  mkwinpeimg.1.in  wimappend.1  wimapply.1  wimcapture.1  wimdelete.1  wimdir.1  wimexport.1  wimextract.1  wiminfo.1  wimjoin.1  wimlib-imagex-apply.1  wimlib-imagex-capture.1  wimlib-imagex-delete.1  wimlib-imagex-dir.1  wimlib-imagex-export.1  wimlib-imagex-extract.1  wimlib-imagex-info.1  wimlib-imagex-join.1  wimlib-imagex-mount.1  wimlib-imagex-mountrw.1  wimlib-imagex-optimize.1  wimlib-imagex-split.1  wimlib-imagex-update.1  (+8 more)
examples/: Makefile  README  applywim.c  capturewim.c  compressfile.c  decompressfile.c  makewim.c  updatewim.c
include/: wimlib.h  wimlib_tchar.h
include/msvc/: unistd.h
include/wimlib/: apply.h  assert.h  avl_tree.h  bitops.h  blob_table.h  bt_matchfinder.h  buffer_io.h  callback.h  capture.h  case.h  chunk_compressor.h  compiler-gcc.h  compiler.h  (+83 more)
m4/: ax_prog_nasm.m4  nasm.m4
programs/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  imagex-win32.c  imagex-win32.h  imagex.c  install.cmd  mkwinpeimg  mkwinpeimg.in  wgetopt.c  wgetopt.h  wimapply.c  wimlib-imagex.vcxproj
programs/.deps/: imagex.Po
rpm/: wimlib-minimal.spec  wimlib-without-fuse-or-ntfs-3g.spec  wimlib-without-ntfs-3g.spec  wimlib.spec  wimlib.spec.in  wimtools.spec
src/: Makefile  Makefile.am  Makefile.in  add_image.c  avl_tree.c  blob_table.c  buffer_io.h  capture_common.c  comp.c  comp.h  compat.c  compress.c  compress.h  compress_chunk.c  compress_common.c  compress_parallel.c  compress_serial.c  cpu_features.c  decomp.c  decomp.h  decompress.c  decompress.h  decompress_common.c  delete_image.c  dentry.c  dentry.h  divsufsort.c  encoding.c  endianness.h  error.c  export_image.c  extract.c  extract_image.c  file_io.c  hardlink.c  header.c  huffman.c  huffman.h  inode.c  inode_fixup.c  (+111 more)
src/.deps/: comp.Plo  decomp.Plo  dentry.Plo  extract.Plo  header.Plo  huffman.Plo  integrity.Plo  lookup_table.Plo  lz.Plo  lzx-common.Plo  lzx-comp.Plo  lzx-decomp.Plo  modify.Plo  mount.Plo  resource.Plo  sha1.Plo  util.Plo  wim.Plo  write.Plo  xml.Plo  xpress-comp.Plo  xpress-decomp.Plo
src/divsufsort/: divsufsort.c  divsufsort.h  sssort.c  trsort.c
tests/: CMakeLists.txt  common_tests.sh  ntfs-cmp.c  security_descriptor_1.base64  security_descriptor_2.base64  set_reparse_point.c  set_reparse_point.vcxproj  test-imagex  test-imagex-capture_and_apply  test-imagex-mount  test-imagex-ntfs  test-imagex-update_and_extract  test_utils.sh  tests-common.sh  tree-cmp.c  win32-test-imagex-capture_and_apply.bat  win32-test-imagex-capture_and_apply.sh  win32-tree-cmp.c  win32-tree-cmp.vcxproj  wlfuzz.c
tests/dir/: comp.c  comp.h  decomp.c  decomp.h  dentry.c  dentry.h  endianness.h  extract.c  header.c  integrity.c  io.h  join.c  lookup_table.c  lookup_table.h  lz.c  lzx-common.c  lzx-comp.c  lzx-decomp.c  lzx.h  modify.c  mount.c  resource.c  security.c  security.h  sha1.c  sha1.h  split.c  timestamp.h  util.c  wim.c  wimlib.h  wimlib_internal.h  write.c  xml.c  xml.h  xpress-comp.c  xpress-decomp.c  xpress.h
tests/dir2/: imagex.c  mkwinpeimg
tests/exclusionlists/: anchored_exception_in_excluded_dir  anchored_prefix_match  anchored_simple  case_insensitive  case_sensitive  inner_star  multiple_stars  prefix_match  question_mark  recursive_match  simple_exception  suffix_match  wildcard_exception
tests/multi-mount/: Makefile  multi-mount.c
tests/wims/: README  corrupted_file_1.wim  corrupted_file_2.wim  cyclic.wim  dotdot.wim  duplicate_names.wim  empty_dacl.wim  linux_xattrs_old.wim  longpaths.wim
tools/: clang-build-with-cfi  clang-scan-build  compress_upcase_table.c  generate_language_id_map.c  get-version-number  get-version-number.cmd  get-version-number.sh  log2_interpolation.r  make-releases  make-releases.sh  make-windows-release  msvc-test-examples.bat  ntfs_fragreport.c  repack-windows-release.sh  run-sparse  run-sparse.sh  run_compression_benchmarks.c  test-examples.sh  update-version  update-version.sh  wimgapi_wrapper.h  windows-after-build-msvc.cmd  windows-build.sh
(+33 files in other folders)
